text is overlapping issue solved

--- a/script/css/admin.css
+++ b/script/css/admin.css
@@ -6922,8 +6922,8 @@ td.sb-td-contact p {
   text-align: right;
 }
 .sb-board .sb-conversation .sb-list > div.sb-right .sb-menu {
-  right: auto;
-  left: -70px;
+  right: 20px;
+  left: auto;
 }
 .sb-board .sb-conversation .sb-list > div.sb-right .sb-menu:empty {
   display: none;
@@ -9122,10 +9122,12 @@ span.initials.avatar_name {
 #ticket-comments .col-md-12 {
   padding: 0;
 }
-#ticket-comments .col-md-12 #comments-section .comment-row.customer .comment-bubble {
-  display: flex;
+#ticket-comments .col-md-12 #comments-section .comment-row .comment-bubble {
+  display: grid;
   align-items: center;
   justify-content: space-between;
+  grid-template-columns: auto auto;
+  gap: 10px;
 }
 
 #test-sms-user,
