--- a/script/css/main.scss
+++ b/script/css/main.scss
@@ -929,6 +929,13 @@ div ul.sb-menu li:hover,
         .sb-textarea {
             padding: 15px 120px 15px 15px;
             border-top: 1px solid rgb(222, 229, 236);
+            textarea{
+                overflow-y: auto;
+                max-height: 176px;
+                &::-webkit-scrollbar{
+                    width: 0;
+                }
+            }
         }
 
         .sb-attachments {
